{
    "name": "InputMapping",
    "maps": [
        {
            "name": "Player",
            "id": "c12362a9-6808-4270-b6fd-663ec77708e0",
            "actions": [
                {
                    "name": "ESC",
                    "type": "Button",
                    "id": "7a64ceb6-fc3d-427d-b799-fe34f85d4be6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoteKey0",
                    "type": "Button",
                    "id": "c3744014-6185-482c-88e4-5c6d10835db9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoteKey1",
                    "type": "Button",
                    "id": "a39ab478-2ed5-4be8-8eb6-5da67cf84684",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoteKey2",
                    "type": "Button",
                    "id": "7eeef912-1a52-4f7b-8235-a64caf4162c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoteKey3",
                    "type": "Button",
                    "id": "c5fc93b0-289f-42db-aa86-93341d722c77",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "554cc8da-d44e-4de9-8dc8-cacfa876cdbc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyBoard",
                    "action": "ESC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "184dae60-a72f-41b0-bb63-d817615b8913",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyBoard",
                    "action": "NoteKey0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8e60b08-0ef0-4b74-8d11-f44c6a08a546",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyBoard",
                    "action": "NoteKey1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "831309a8-2522-4ea8-a041-5eaf363984f4",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyBoard",
                    "action": "NoteKey2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8cb07d5-9da0-460a-b313-e864a3de5aa7",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyBoard",
                    "action": "NoteKey3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d7e73dfc-c59a-4ee0-aed0-696fbb59920f",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "a81f921b-736e-4652-9f4f-cd27669a68c4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b890c4f5-6ecf-406b-8b2c-1c71c8587643",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard",
            "bindingGroup": "KeyBoard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}